# np2-for-vita

./: .gitignore  AGENTS.md  README.md  claude_review.txt  cordex_updatenote.txt
docs/: np2_vita_config_stable.ini  psp_np2_reuse.md  release_notes_touhou_v010.md  release_notes_v009.md  research.md  vita_config.md
prototype/vita_np2_081a/: CMakeLists.txt  claude_review.txt  cordex_updatenote.txt  pccore.c
prototype/vita_np2_081a/cbus/: pcm86io.c  pcm86io.h
prototype/vita_np2_081a/codecnv/: sjisucs2.c
prototype/vita_np2_081a/fdd/: sxsi.c
prototype/vita_np2_081a/font/: font.c
prototype/vita_np2_081a/generic/: softkbd.c
prototype/vita_np2_081a/io/: np2sysp.c
prototype/vita_np2_081a/psp/: dosio.c  np2.c  scrnmng.c  scrnmng.h  taskmng.h
prototype/vita_np2_081a/vita_compat/: psp_compat.h
prototype/vita_np2_kai/: CMakeLists.txt  claude_review.txt  cordex_updatenote.txt
prototype/vita_np2_kai/cbus/: pcm86io.c  pcm86io.h
prototype/vita_np2_kai/embed/menubase/: menubase.c
prototype/vita_np2_kai/fdd/: sxsihdd.c
prototype/vita_np2_kai/io/: artic.c  artic.h  iocore.c  iocore.h  sysport.c
prototype/vita_np2_kai/psp/: fontmng.c  keyconf.c  np2.c  scrnmng.c  soundmng.c  taskmng.c
prototype/vita_np2_kai/psp/psp/: compiler.h
prototype/vita_np2_kai/sound/: fmtimer.c  pcm86.h  pcm86c.c  sound.c
prototype/vita_np2_kai/vram/: sdraw.c  sdraw.mcr
prototype/vita_np2_kai_fullcore/: CMakeLists.txt  claude_review.txt  compiler_base.h  cordex_updatenote.txt  keystat.tbl  nevent.c  pccore.c  pccore.h  statsave.c  statsave.tbl
prototype/vita_np2_kai_fullcore/bios/: bios1b.c  sxsibios.c
prototype/vita_np2_kai_fullcore/cbus/: ideio.c
prototype/vita_np2_kai_fullcore/common/: profile.h
prototype/vita_np2_kai_fullcore/diskimage/: fddfile.c
prototype/vita_np2_kai_fullcore/diskimage/fd/: fdd_xdf.c
prototype/vita_np2_kai_fullcore/fdd/: diskdrv.h  sxsicd.c
prototype/vita_np2_kai_fullcore/generic/: hostdrvs.c
prototype/vita_np2_kai_fullcore/i286c/: i286c.c
prototype/vita_np2_kai_fullcore/io/: iocore.h  mouseif.c  np2sysp.c  printif.c  printif.h
prototype/vita_np2_kai_fullcore/psp/: commng.c  commng.h  fontmng.c  ini.c  keyconf.c  np2.c  np2.h  scrnmng.c  scrnmng.h  soundmng.c  soundmng.h  sysmng.c  sysmng.h  vita_kai_stubs.c
prototype/vita_np2_kai_fullcore/psp/psp/: compiler.h
prototype/vita_np2_kai_fullcore/sound/: cs4231c.c  pcm86c.c
prototype/vita_np2_kai_fullcore/sound/fmgen/: fmgen_headers.h
prototype/vita_np2_kai_fullcore/sound/mame/: np2interop.h  ymf262.c
prototype/vita_np2_kai_fullcore/vita_compat/: psp_compat.h
prototype/vita_np2_kai_fullcore/vram/: scrndraw.c
prototype/vita_np2_kai_fullcore/wab/: wab.c
prototype/vita_np2_kai_mainline_v001/: CMakeLists.txt  claude_review.txt  cordex_updatenote.txt  keystat.h  np2_thread.h
prototype/vita_np2_kai_mainline_v001/cbus/: boardmo.c  boardmo.h  boardsb16.h
prototype/vita_np2_kai_mainline_v001/i286c/: i286c.h  i286c_ea.c  i286c_f6.c  i286c_fe.c  i286c_optbl.h  i286c_sf.mcr
prototype/vita_np2_kai_mainline_v001/io/: bmsio.h  dmac.c  gdc.h  np2sysp.c
prototype/vita_np2_kai_mainline_v001/psp/: Makefile  commng.h  ini.c  keyconf.c  np2.c  np2.h  scrnmng.h  sysmng.c
prototype/vita_np2_kai_mainline_v001/sound/: ct1741c.c  s98.c
prototype/vita_np2_kai_mainline_v001/textnorm/: to_utf8.py
prototype/vita_np2_kai_mainline_v001/vita_compat/: psprtc.h
prototype/vita_np2_kai_mainline_v001/vram/: videofilter.c  videofilter.h
prototype/vita_np2_kai_mainline_v001/wab/: wab_rly.res
prototype/vita_np2_kai_mainline_v002_minimal/: CMakeLists.txt  claude_review.txt  cordex_updatenote.txt  np2_thread.c
prototype/vita_np2_kai_mainline_v002_minimal/bios/: bios1f.c
prototype/vita_np2_kai_mainline_v002_minimal/codecnv/: jisucs2.c
prototype/vita_np2_kai_mainline_v002_minimal/font/: font.c
prototype/vita_np2_kai_mainline_v002_minimal/generic/: hostdrvnt.h
prototype/vita_np2_kai_mainline_v002_minimal/i286c/: cpucore.h  i286c.c  i286c.mcr  i286c_mn.c  i286c_rp.c  v30patch.c
prototype/vita_np2_kai_mainline_v002_minimal/io/: dmac.h
prototype/vita_np2_kai_mainline_v002_minimal/psp/: dosio.c  np2.c  np2.h  scrnmng.c  taskmng.c
prototype/vita_np2_kai_mainline_v002_minimal/sound/: ct1741g.c  opna.c  opna.h  soundrom.h
prototype/vita_np2_kai_mainline_v002_minimal/textnorm/: common.py  normalize_symbols.py  textnorm.py  to_lf.py
prototype/vita_np2_kai_native_v036_restart/: CMakeLists.txt  README_VITA.md  claude_review.txt  claude_update.txt  cordex_updatenote.txt  pccore.c
prototype/vita_np2_kai_native_v036_restart/bios/: bios.c
prototype/vita_np2_kai_native_v036_restart/cbus/: boardlol.h
prototype/vita_np2_kai_native_v036_restart/codecnv/: ucs4ucs2.c
prototype/vita_np2_kai_native_v036_restart/generic/: hostdrvnt.c
prototype/vita_np2_kai_native_v036_restart/i286c/: i286c_8x.c  i286c_sf.c
prototype/vita_np2_kai_native_v036_restart/io/: upd4990.h
prototype/vita_np2_kai_native_v036_restart/psp/: dosio.h  ini.c  np2.c  np2.h  psp_readme.txt  sysmng.h  vita_profiler.c  vita_profiler.h
prototype/vita_np2_kai_native_v036_restart/sound/: sndmtcs.h
prototype/vita_np2_kai_v09_rebuild/: CMakeLists.txt  claude_review.txt  cordex_updatenote.txt  pccore.c
prototype/vita_np2_kai_v09_rebuild/cbus/: boardlol.c
prototype/vita_np2_kai_v09_rebuild/codecnv/: ucs4utf8.c
prototype/vita_np2_kai_v09_rebuild/fdd/: diskdrv.h  fdd_mtr.c
prototype/vita_np2_kai_v09_rebuild/i286c/: i286c_0f.c
prototype/vita_psp_ui_probe/: CMakeLists.txt
prototype/vita_psp_ui_probe/data/: psp_key.txt
prototype/vita_psp_ui_probe/src/: main.c
prototype/vita_sdl_smoketest/: CMakeLists.txt
release/np2_kai_mainline_v001_20260516/: README.md
release/np2_kai_mainline_v002_minimal_20260518/: README.md
release/np2_kai_native_v036_restart_20260519/: README.txt
release/np2_kai_v09_rebuild_20260515/: README.md
release/np2_kai_vita_rc009/: README.md  known_issues.md  np2_vita_config_fast_beta.ini
research/psp_np2/: hissorii.html  np2_3ds.html  sakahi.html
scripts/: bootstrap-vitasdk-packages.ps1  env.cmd  env.ps1
(+345 files in other folders)
